Jann 30/objects/CRS_LookupSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Custom lookups settings.</description>
    <fields>
        <fullName>FieldLabels__c</fullName>
        <description>Comma-separated list of field labels. Fill this field only if you want to override some field label. Use &apos;-&apos; (minus sign) as a placeholder for fields with standard labels. For example, you have 4 fields and want to override the 3rd field label: &apos;-,-,MyLabel,-&apos;</description>
        <inlineHelpText>Comma-separated list of field labels. Fill it only if you want to override some field label. Use &apos;-&apos; (minus sign) as a placeholder for fields with standard labels. For example, you have 4 fields and want to override the 3rd field label: &apos;-,-,MyLabel,-&apos;</inlineHelpText>
        <label>Field Labels</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldNames__c</fullName>
        <description>Comma-separated list of fields API names, eg. &apos;Name,MyCustomField__c&apos;</description>
        <inlineHelpText>Comma-separated list of fields API names, eg. &apos;Name,MyCustomField__c&apos;</inlineHelpText>
        <label>Fields</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasActiveField__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating that given object has custom field &apos;Active__c&apos;.</description>
        <inlineHelpText>Flag indicating that given object has custom field &apos;Active__c&apos;.</inlineHelpText>
        <label>Has Active Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasGvwFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has GVW Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>CRS Custom Lookup Settings</label>
</CustomObject>